--- a/s3_website.yml
+++ b/s3_website.yml
@@ -1,20 +1,18 @@
-s3_id: <%= ENV['ROBOCAT_DEPLOY_AWS_S3_ACCESS_KEY_ID'] %>
-s3_secret: <%= ENV['ROBOCAT_DEPLOY_AWS_S3_SECRET_ACCESS_KEY'] %>
-s3_bucket: televisedapp.com
-
-cloudfront_distribution_id: <%= ENV['CF_DIST_ID']  %>
+s3_id: <%= ENV['S3_ACCESS_KEY_ID'] %>
+s3_secret: <%= ENV['S3_SECRET_ACCESS_KEY'] %>
+s3_bucket: web.televisedapp.com
+cloudfront_distribution_id: E2B43PTI7GWKSO
 
 site: public
 
-max_age:
-    "*": 300
-
+max_age: 300
 gzip: true
 
-# ignore_on_server: downloads
+ignore_on_server: downloads
 
 cloudfront_distribution_config:
     aliases:
-        quantity: 1
+        quantity: 2
         items:
-            CNAME: televisedapp.com
+            CNAME0: televisedapp.com
+            CNAME1: www.televisedapp.com
